--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
-{
+{  
+   "engines":{
+    "node":"22.16.0"
+   },
+   
   "name": "project2",
   "version": "1.0.0",
   "main": "index.js",
@@ -10,8 +14,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
@@ -19,6 +26,8 @@
     "joi": "^18.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.5",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
